modified markup and added style

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Google-Hompage</title>
 </head>
 <body>
   <!-- main container -->
-  <div class="containeer">
+  <div class="container">
     <!-- nav-div -->
     <nav class="nav">
       <!-- nav-left -->
@@ -30,29 +31,31 @@
       <!-- google logo -->
       <img src="/assets/googlelogo_color_272x92dp.png" class="google-img">
       <!-- searchbar -->
-      <input type="text">
+      <div class="bar">
+        <input type="text" class="searchbar">
+      </div>
       <!-- button container -->
       <div class="btn-container">
         <button class="btn btn-search">Google Search</button>
-        <button class="btn btn-lucky">I'm Feeling Lucky</button>
+        <button class="btn btn-search">I'm Feeling Lucky</button>
       </div>
     </section>  
-
-    <!-- footer -->
-    <footer>
-      <!-- left-side -->
-      <div class="foot-left">
-        <a href="#">Advertising</a>
-        <a href="#">Business</a>
-        <a href="#">How Search Works</a>
-      </div>
-      <!-- righ-side -->
-      <div class="foot-right">
-        <a href="#">Privacy</a>
-        <a href="#">Terms</a>
-        <a href="#">Settings</a>
-      </div>
-    </footer>
   </div>
+
+  <!-- footer -->
+  <footer>
+    <!-- left-side -->
+    <div class="foot-left">
+      <a href="#">Advertising</a>
+      <a href="#">Business</a>
+      <a href="#">How Search Works</a>
+    </div>
+    <!-- righ-side -->
+    <div class="foot-right">
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <a href="#">Settings</a>
+    </div>
+  </footer>
 </body>
 </html>
